2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php:
	(elec_get_blank_votes_election): temporary workaround to get the right
	value

2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/referenda/2005-10/index.wml: add links to the
	results
	* foundation.gnome.org/vote/results.wml: display the number of blank
	votes if not null
	* foundation.gnome.org/vote/include/election-sql.php:
	(elec_get_blank_votes_election): new

2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml: add news item about preliminary
	results of referendum
	* foundation.gnome.org/news/index.wml: ditto
	* foundation.gnome.org/vote/include/election-sql.php:
	(elec_get_results_election): don't select choice with id = -1 (it's a
	blank vote for referenda and we don't need to have it there to know it
	exists)
	(elec_get_votes_for_anon_token): ditto
	* foundation.gnome.org/vote/include/step4-commit.php: (step4_do): no
	need to insert the -1 vote for referenda.
	Add FIXME

2005-11-05  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/elections/2005/index.wml: add link to the iCal
	file

2005-11-04  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/elections/2005/timeline.ics: fix iCal file

2005-11-04  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml: add news item about elections
	* foundation.gnome.org/news/index.wml: ditto
	* foundation.gnome.org/elections/2005/Makefile.am: add timeline.ics
	* foundation.gnome.org/elections/2005/timeline.ics: new
	* foundation.gnome.org/elections/2005/rules.wml: updated some dates
	and make it clear that the number of slots depends in the result of
	the referendum
	* foundation.gnome.org/elections/2005/voters.wml: updated

2005-10-25  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php: fix code so that
	it works in MySQL 4.1 (but won't work in MySQL 4.0...)

2005-10-25  Vincent Untz  <vuntz@gnome.org>
